--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -27,7 +27,7 @@ jobs:
                     coverage: none
 
             -   run: composer install --no-progress
-            -   run: vendor/bin/phpunit --stop-on-failure
+            -   run: vendor/bin/phpunit --verbose
 
     test_lowest_dependencies:
         runs-on: ubuntu-latest
