--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     "require": {
         "php": "^7.2",
         "symfony/process": "^4.4|^5.0",
-        "symfony/event-dispatcher": "^4.4|^5.0"
+        "symfony/event-dispatcher": "^4.4|^5.0",
+        "nette/utils": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
         "symfony/filesystem": "^4.4|^5.0",
         "psr/log": "^1.1",
         "symplify/easy-coding-standard": "^7.2",
-        "nette/utils": "^3.0",
         "phpstan/phpstan": "^0.12.4",
         "symplify/changelog-linker": "^7.2",
         "symplify/phpstan-extensions": "^7.2",
