--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php": "^7.2",
         "symfony/process": "^4.4|^5.0",
-        "symfony/event-dispatcher": "^4.4|^5.0",
+        "symfony/event-dispatcher": "^3.4|^4.4|^5.0",
         "nette/utils": "^3.0"
     },
     "require-dev": {
