--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,7 @@
         "phpunit/phpunit": "^8.5",
         "symfony/filesystem": "^4.4|^5.0",
         "psr/log": "^1.1",
-        "phpstan/phpstan": "^0.12.4",
-        "rector/rector": "^0.6.7",
-        "tracy/tracy": "^2.7",
-        "phpstan/phpstan-phpunit": "^0.12"
+        "tracy/tracy": "^2.7"
     },
     "autoload": {
         "psr-4": {
