--- a/rector-ci.yaml
+++ b/rector-ci.yaml
@@ -1,9 +1,14 @@
 parameters:
+    paths:
+        - 'src'
+        - 'tests'
+
     sets:
         - 'dead-code'
         - 'code-quality'
         - 'coding-style'
         - 'nette-utils-code-quality'
+        - 'privatization'
 
         # upgrades
         - 'phpunit80'
