split GitHub action workflows

--- a/composer.json
+++ b/composer.json
@@ -39,10 +39,10 @@
         "monolog/monolog": "Enables logging of executed git commands"
     },
     "scripts": {
-        "check-cs": "vendor/bin/ecs check src tests --ansi",
-        "fix-cs": "vendor/bin/ecs check src tests --fix --ansi",
-        "phpstan": "vendor/bin/phpstan analyse src tests --error-format symplify --ansi",
+        "check-cs": "vendor/bin/ecs check --ansi",
+        "fix-cs": "vendor/bin/ecs check --fix --ansi",
+        "phpstan": "vendor/bin/phpstan analyse --error-format symplify --ansi",
         "changelog": "vendor/bin/changelog-linker dump-merges --in-categories --ansi",
-        "rector": "vendor/bin/rector process src tests --config rector-ci.yaml"
+        "rector": "vendor/bin/rector process --config rector-ci.yaml --dry-run --ansi"
     }
 }
