--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
         "nette/utils": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "^8.5|^9.0",
         "symfony/filesystem": "^4.4|^5.0",
         "psr/log": "^1.1",
         "symplify/easy-coding-standard": "^7.2",
         "phpstan/phpstan": "^0.12.4",
         "symplify/changelog-linker": "^7.2",
         "symplify/phpstan-extensions": "^7.2",
-        "rector/rector": "^0.7.8",
+        "rector/rector": "^0.7.9",
         "tracy/tracy": "^2.7",
         "phpstan/phpstan-phpunit": "^0.12"
     },
