--- a/.github/workflows/phpstan.yaml
+++ b/.github/workflows/phpstan.yaml
@@ -16,5 +16,5 @@ jobs:
                     php-version: 7.3
                     coverage: none
 
-            -   run: composer install --no-progress
-            -   run: composer phpstan
+            -   run: composer install --no-progress --ansi
+            -   run: composer phpstan --ansi
