--- a/composer.json
+++ b/composer.json
@@ -8,23 +8,22 @@
         { "name": "Tomas Votruba", "email": "tomas.vot@gmail.com" }
     ],
     "require": {
-        "php": ">=7.2",
-        "symfony/process": "^4.4|^5.0",
-        "symfony/event-dispatcher": "^4.4|^5.0",
+        "php": ">=7.3",
+        "symfony/process": "^4.4|^5.1",
+        "symfony/event-dispatcher": "^4.4|^5.1",
         "nette/utils": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5|^9.4",
-        "symfony/filesystem": "^4.4|^5.0",
+        "phpunit/phpunit": "^9.5",
+        "symfony/filesystem": "^4.4|^5.1",
         "psr/log": "^1.1",
-        "symplify/easy-coding-standard": "^8.3",
-        "phpstan/phpstan": "^0.12.18",
-        "symplify/changelog-linker": "^8.3",
-        "symplify/phpstan-extensions": "^8.3",
-        "rector/rector": "^0.8.10",
+        "symplify/easy-coding-standard": "^9.0",
+        "phpstan/phpstan": "^0.12.64",
+        "symplify/changelog-linker": "^9.0",
+        "symplify/phpstan-extensions": "^9.0",
+        "rector/rector": "^0.9",
         "tracy/tracy": "^2.7",
-        "phpstan/phpstan-phpunit": "^0.12",
-        "migrify/config-transformer": "^0.3.48"
+        "phpstan/phpstan-phpunit": "^0.12"
     },
     "autoload": {
         "psr-4": {
@@ -44,6 +43,6 @@
         "fix-cs": "vendor/bin/ecs check --fix --ansi",
         "phpstan": "vendor/bin/phpstan analyse --error-format symplify --ansi",
         "changelog": "vendor/bin/changelog-linker dump-merges --in-categories --ansi",
-        "rector": "vendor/bin/rector process --config rector-ci.php --dry-run --ansi"
+        "rector": "vendor/bin/rector process --dry-run --ansi"
     }
 }
