--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symplify/phpstan-extensions": "^9.0",
         "rector/rector": "^0.9",
         "tracy/tracy": "^2.7",
-        "phpstan/phpstan-phpunit": "^0.12"
+        "phpstan/phpstan-phpunit": "^0.12",
+        "symplify/phpstan-rules": "^9.0"
     },
     "autoload": {
         "psr-4": {
