--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,7 +25,7 @@ jobs:
 
             -   uses: shivammathur/setup-php@v2
                 with:
-                    php-version: ${{ matrix.matrix.php }}
+                    php-version: ${{ matrix.php }}
                     coverage: none
 
             # composer install cache - https://github.com/ramsey/composer-install
