--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,6 +22,9 @@ jobs:
 
         steps:
             -   uses: actions/checkout@v2
+            -   run: git fetch --depth=10000
+
+            -   run: git --version
 
             -   uses: shivammathur/setup-php@v2
                 with:
