--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,6 +5,15 @@ includes:
     - vendor/symplify/phpstan-rules/config/static-rules.neon
     - vendor/symplify/phpstan-rules/config/services/services.neon
 
+services:
+    -
+        class: Symplify\PHPStanRules\Rules\RequireMethodCallArgumentConstantRule
+        tags: [phpstan.rules.rule]
+        arguments:
+            constantArgByMethodByType:
+                GitWrapper\GitWorkingCopy:
+                    run: [0]
+
 parameters:
     level: max
     reportUnmatchedIgnoredErrors: false
