--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "rector/rector": "^0.9",
         "tracy/tracy": "^2.7",
         "phpstan/phpstan-phpunit": "^0.12",
-        "symplify/phpstan-rules": "^9.0"
+        "symplify/phpstan-rules": "^9.0",
+        "ondram/ci-detector": "^3.5"
     },
     "autoload": {
         "psr-4": {
