--- a/.gitattributes
+++ b/.gitattributes
@@ -6,10 +6,9 @@
 /.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.travis.yml export-ignore
 /CHANGELOG.md export-ignore
 /changelog-linker.php export-ignore
 /ecs.php export-ignore
 /phpstan.neon export-ignore
 /phpunit.xml export-ignore
-/rector-ci.php export-ignore
+/rector.php export-ignore
